Fixed bug with gray backgrounds being left behind a revoked certificate being marked as handled

--- a/fk7263/src/main/webapp/webcert/css/inera-certificate.css
+++ b/fk7263/src/main/webapp/webcert/css/inera-certificate.css
@@ -138,8 +138,7 @@ span.help {
 }
 
 .revoked-certificate {
-    background-color: #eeeeee;
-    color: #aaaaaa;
+  color: #aaaaaa;
 }
 .revoked-certificate div.infobox, .revoked-certificate div.infobox h3, .revoked-certificate div.infobox h4{
     background-color: #e5e5e5;
